--- a/css/styles.css
+++ b/css/styles.css
@@ -464,18 +464,30 @@ body
     display: flex;
 }
 
+.customers-list-item
+{
+    width: 170px;
+    height: 92px;
+}
+
 .customers-list-item:not(:last-child) 
 {
     margin-right: 30px;
 }
 .customers-list-link
 {
+    /*
     padding-top: 16px;
     padding-bottom: 16px;
     padding-left: 32px;
     padding-right: 32px;
+    */
+    width: 100%;
+    height: 100%;
 
-    display: block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
     border: 1px solid #AFB1B8;
     border-radius: 4px;
@@ -559,7 +571,10 @@ body
     margin-bottom: 30px;
 }
 
-.gallery-link {
+.gallery-link:hover
+{
+    display: block;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 .gallery-img 
 {
