--- a/css/styles.css
+++ b/css/styles.css
@@ -185,7 +185,7 @@ body
     margin-left: auto;
     margin-right: auto;
 
-    width: 1600px;
+    max-width: 1600px;
 }
 
 .hero-header
@@ -355,8 +355,6 @@ body
 {
     width: 270px;
 
-    padding-bottom: 30px;
-
     border-radius: 0 0 4px 4px;
     background-color: #FFFFFF;
 
@@ -402,14 +400,16 @@ body
 /*--social-begin--*/
 .social-list
 {
+    padding-bottom: 30px;
+
     display: flex;
     justify-content: center;
 }
 
-.social-item
+/*.social-item
 {
-
-}
+    
+}*/
 .social-item:not(:last-child) 
 {
     margin-right: 10px;
@@ -690,11 +690,13 @@ body
 .footer-social-container
 {
     margin-left: 70px;
+
+    padding-top: 12px;
 }
 
 .footer-social-header
 {
-    margin-top: 12px;
+    margin-top: 0;
     margin-bottom: 20px;
 
     font-weight: 700;
